[tool.poetry]
name = "kng"
version = "0.1.0"
description = "handy utility functions collection"
authors = ["Kelvin Ng <hoishing@gmail.com>"]
readme = "README.md"
repository = "https://github.com/hoishing/kng"
homepage = "https://hoishing.github.io/kng"
keywords = ["utilities"]

[[tool.poetry.packages]]
include = "kng"


[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.23.3"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.2"
click = "^8.1.3"
coverage = "^7.1.0"
pytest = "^7.2.1"
genbadge = { extras = ["coverage"], version = "^1.1.0" }
mkdocstrings = { extras = ["python"], version = "^0.20.0" }
auto-changelog = "^0.6.0"
mkdocs-material = "^9.0.14"

[tool.poetry.group.dev]
optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pump = "pump:main"
